# vli

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
benchmark/: .main.cpp.swp  CMakeLists.txt  data.cpp  main.cpp  minimal_polynomial.hpp  misc.hpp  timing.h  tools.h  use_gmp_integers.hpp
doc/.svn/: all-wcprops  entries
doc/logo/.svn/: all-wcprops  entries
main/: CMakeLists.txt  main.cpp
main/.svn/: all-wcprops  entries
regression/.svn/: all-wcprops  entries
regression/.svn/text-base/: CMakeLists.txt.svn-base
regression/polynomial/: CMakeLists.txt  polynomial_tests.cpp  use_gmp_integers.hpp  vli_monomial_tests.cpp
regression/polynomial/.svn/: all-wcprops  entries
regression/polynomial/.svn/text-base/: polynomial_tests.cpp.svn-base
regression/vli/: CMakeLists.txt  bit_shift.cpp  bitwise.cpp  comparison.cpp  constructors.cpp  divides.cpp  divides_modulo.cpp  equal.cpp  gmp_and_str_conversion.cpp  gmp_divides.cpp  gmp_extending_inline_multiplies.cpp  gmp_extending_multiplie_add.cpp  gmp_extending_multiplies.cpp  gmp_extending_multiplies_negative.cpp  gmp_extending_plus.cpp  gmp_karatsuba_extending_multiplies.cpp  gmp_minus.cpp  gmp_modulo.cpp  gmp_multiplies.cpp  gmp_multiplies_int.cpp  gmp_plus.cpp  minus.cpp  misc_tests.cpp  modulo.cpp  multiplies.cpp  multiplies_negative.cpp  negate.cpp  plus.cpp  plus_negative.cpp  test_header.hpp
regression/vli/.svn/: all-wcprops  entries
regression/vli/.svn/text-base/: constructors.cpp.svn-base  divides_modulo.cpp.svn-base  gmp_and_str_conversion.cpp.svn-base  gmp_extending_inline_multiplies.cpp.svn-base  gmp_extending_multiplie_add.cpp.svn-base  gmp_extending_multiplies.cpp.svn-base  gmp_extending_multiplies_negative.cpp.svn-base  gmp_extending_plus.cpp.svn-base  gmp_multiplies_int.cpp.svn-base  multiplies.cpp.svn-base
src/.svn/: all-wcprops  entries
src/vli/: integer.hpp  integer.ipp  vector.hpp
src/vli/.svn/: all-wcprops  entries
src/vli/.svn/prop-base/: integer.hpp.svn-base  integer.ipp.svn-base
src/vli/.svn/text-base/: polynomial.hpp.svn-base
src/vli/detail/: kernels_cpu.h  kernels_gpu.h
src/vli/detail/.svn/: all-wcprops  entries
src/vli/detail/.svn/text-base/: kernels_gpu.h.svn-base
src/vli/detail/cpu/: kernels_cpu_operations.cpp
src/vli/detail/cpu/.svn/: all-wcprops  entries
src/vli/detail/cpu/generic/: kernels_cpu_add_asm.h  kernels_cpu_mul_asm.h  kernels_cpu_muladd_asm.h  kernels_cpu_sub_asm.h
src/vli/detail/cpu/generic/.svn/: all-wcprops  entries
src/vli/detail/cpu/generic/.svn/text-base/: kernels_cpu_add_asm.h.svn-base  kernels_cpu_sub_asm.h.svn-base
src/vli/detail/cpu/powerpc/: kernel_implementation_macros.h  kernels_cpu_inline_add.h  kernels_cpu_inline_sub.h  kernels_cpu_mul_asm.h  kernels_cpu_muladd_asm.h
src/vli/detail/cpu/powerpc/.svn/: all-wcprops  entries
src/vli/detail/cpu/x86_64/: kernel_implementation_macros.h  kernels_cpu_inline_add.h  kernels_cpu_inline_sub.h  kernels_cpu_mul_asm.h  kernels_cpu_muladd_asm.h
src/vli/detail/cpu/x86_64/.svn/: all-wcprops  entries
src/vli/detail/cpu/x86_64/.svn/text-base/: kernels_cpu_inline_sub.h.svn-base
src/vli/detail/gpu/: inner_product_gpu_accelerator.hpp  polynomial_operations.cu
src/vli/detail/gpu/.svn/: all-wcprops  entries
src/vli/detail/gpu/.svn/text-base/: inner_product_gpu_accelerator.hpp.svn-base  polynomial_operations.cu.svn-base  polynomial_operations.h.svn-base
src/vli/detail/gpu/detail/: gpu_error_message.h  gpu_mem_block.hpp  scheduler.h  variables_gpu.h
src/vli/detail/gpu/detail/.svn/: all-wcprops  entries
src/vli/detail/gpu/detail/.svn/text-base/: gpu_mem_block.h.svn-base  gpu_mem_block.hpp.svn-base  multiply_extend_algo.hpp.svn-base  numeric.h.svn-base
src/vli/detail/gpu/kernels/: kernels_gpu_mul_asm.hpp  kernels_gpu_neg_asm.hpp
src/vli/detail/gpu/kernels/.svn/: all-wcprops  entries
src/vli/detail/gpu/kernels/.svn/text-base/: kernel_macros.h.svn-base  kernels_gpu_add_asm.hpp.svn-base
src/vli/detail/gpu/polynomial_multiplication/: accelerator_polynomial_multiplication_max_order_combined.hpp
src/vli/detail/gpu/polynomial_multiplication/.svn/: all-wcprops  entries
src/vli/detail/gpu/polynomial_multiplication/.svn/text-base/: accelerator_polynomial_multiplication_max_order_each.hpp.svn-base
src/vli/detail/gpu/polynomial_reduction/.svn/: all-wcprops  entries
src/vli/detail/gpu/polynomial_reduction/.svn/text-base/: polynomial_reduction.hpp.svn-base
src/vli/detail/gpu/tasklist/: single_coefficient_task.h
src/vli/detail/gpu/tasklist/.svn/: all-wcprops  entries
src/vli/detail/gpu/tasklist/.svn/text-base/: tasklist.h.svn-base  tasklist_max_order_combined.hpp.svn-base  tasklist_max_order_each.hpp.svn-base
src/vli/doc/: algo.dox  gpu.dox  vli.dox
src/vli/doc/.svn/: all-wcprops  entries
src/vli/doc/.svn/text-base/: ME128n.png.svn-base
src/vli/function_hooks/: vli_number_cpu_function_hooks.hpp
src/vli/function_hooks/.svn/: all-wcprops  entries
src/vli/polynomial/: polynomial.hpp  polynomial_traits.hpp  vector_polynomial_cpu.hpp
src/vli/polynomial/.svn/: all-wcprops  entries
src/vli/polynomial/.svn/text-base/: numeric.hpp.svn-base  polynomial.hpp.svn-base  variable.hpp.svn-base
src/vli/polynomial/detail/: helpers.hpp  polynomial_impl.hpp
src/vli/polynomial/detail/.svn/: all-wcprops  entries
src/vli/polynomial/detail/.svn/text-base/: storage.hpp.svn-base
utils/.svn/: all-wcprops  entries
